# ZipLM

./: .gitignore  .gitmodules  Cargo.toml  README.md  pyproject.toml  run_tests.sh
python/baby_lm/: __init__.py  __init__.pyi  ngrams.pyi  readdata.pyi  utils.pyi
python/tests/: test_all.py  test_data.py  test_ngrams.py  test_utils.py  test_zipmodels.py
python/zip_lm/: __init__.pyi  eval_utils.pyi  readdata.pyi  zipmodels.pyi
python/zip_lm/eval/: __init__.py  get_data.py  metrics.py
python/zip_lm/scripts/: build_t5model.py  evaluate_bootstrapzipmodel.py  evaluate_ngrams.py  evaluate_random.py  evaluate_softmaxzipmodel.py  evaluate_t5.py  get_data_metrics.py  plot_word_usage.py
python/zip_lm/t5/: __init__.py  modelbuilder.py  tokenizer.py
report/: Makefile  bibliography.bib  main.tex  report.tex
results/: basic_data.jsonl  basic_data.tex  bootstrapzip.jsonl  ngrams.jsonl  random.jsonl  softmaxzip.jsonl  t5model.jsonl
src/: eval_utils.rs  lib.rs  main.rs  ngrams.rs  python.rs  readdata.rs  utils.rs  zipmodels.rs
src/readdata/: blimp.rs  testdata.rs
