[package]
name = "baby_lm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "baby_lm"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.21.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-aux = "4.5.0"
