[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "zip_lm"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
  "scikit-learn~=1.4.2",
  "transformers~=4.41.0",
  "tokenizers~=0.19.1",
  "datasets~=2.19.1",
  "torch~=2.3.0",
  "jax>=0.2.8",
  "jaxlib>=0.1.59",
  "flax~=0.8.3",
  "optax>=0.0.9",
  "sentencepiece~=0.2.0",
]

[project.optional-dependencies]
tests = ["pytest"]

[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]
